<resources>
    <string name="app_name">SelfMessages</string>
    <string name="send">SEND</string>
    <string name="type_your_message">Type your message...</string>
    <string name="nameprint">Enter your name</string>
    <string name="sender_name">SENDER NAME:</string>
    <string name="message_date">MESSAGE DATE</string>
    <string name="delete_box">DELETE</string>
    <string name="cancel">CANCEL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
