<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.selfmessages.HomeFragment"
    android:background="@drawable/app_box"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ListView
        android:id="@+id/messagesList"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:padding="10dp">
        <EditText
            android:id="@+id/userName"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nameprint"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/sendMessageText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/type_your_message"
            android:textSize="14sp" />

        <Button
            android:id="@+id/sendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/add_button"
            android:textSize="20sp"
            android:text="@string/send" />
    </LinearLayout>


</RelativeLayout>